--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -17,7 +17,8 @@
             <h1 class="display-5">Sign Up</h1>
             <form action="#" th:action="@{/signup}" method="POST">
                 <div id="success-msg" th:if="${signupSuccess}" class="alert alert-dark">
-                    You successfully signed up! Please continue to the <a id="login-link" th:href="@{/login}">login</a> page.
+                    You successfully signed up! In a moment you will be redirected to the <a id="login-link" th:href="@{/login}">login</a> page.
+                    <meta http-equiv="refresh" content="5; URL=/login" />
                 </div>
                 <div id="error-msg" th:if="${signupError}" class="alert alert-danger">
                     <span th:text="${signupError}">Example Signup Error Message</span>
@@ -42,7 +43,7 @@
                         <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Enter Password" maxlength="20" required>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" id="buttonSignUp">Sign Up</button>
+                <button id="submit-button" type="submit" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </body>
