Login and Signup Responsive

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <title>Result</title>
 </head>
 <body class="p-3 mb-2 bg-light text-black">
-<div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
+<div class="container justify-content-center w-90 p-3" style="margin-top: 5em;">
     <div class="alert alert-danger fill-parent">
         <h1 class="display-5">Something went wrong!</h1>
         <span>Our Engineers are on it.</span>
