--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
-
+        <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
         <title>Result</title>
     </head>
     <body class="p-3 mb-2 bg-light text-black">
-        <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
+        <div class="container justify-content-center w-90 p-3" style="margin-top: 5em;">
             <div th:if="${result == 'success'}" class="alert alert-success fill-parent">
                 <h1 class="display-5" id="success">Success</h1>
                 <span>Your changes were successfully saved. Click <a th:href="@{/home}" id="aResultSuccess">here</a> to continue.</span>
