--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
-
+        <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
         <title>Sign Up</title>
     </head>
     <body class="p-3 mb-2 bg-light text-black">
-        <div class="container justify-content-center w-50 p-3" style="background-color: #eeeeee; margin-top: 5em;">
+        <div class="container justify-content-center w-90 p-3" style="background-color: #eeeeee; margin-top: 5em;">
             <div class="form-group">
                 <label><a th:href="@{/login}">Back to Login</a></label>
             </div>
